

Revision History:
 5-Sep-2002

Problems fixed:
    1. An attempt to set a non-existent parameter now correctly throws NoSuchParameterException rather
       than UnusedParameterValueException.
    2. Obtaining the URL from a javascript: request no longer throws MalformedURLException.

Additions:
    1. The forms, images, links, and Form.elements arrays now handle string indexes

30-Aug-2002 1.4.5
Acknowledgements:
    Thanks to Steve Heath for an example on how to make JSPs work with ServletUnit.
    Thanks to Rajan Narasimhan for fixing the relative URL computation problem.
    Thanks to Sebastien Rosset for pointing out the case sensitivity problem with WebResponse.isHTML
    Thanks to Hans-Joerg Hessmann for a faster algorithm for the table lookups
    Thanks to Peter Royal for fixing the handling of query-only relative URLs and the IllegalStateException when
       scripting is disabled.
    Thanks to Michael Reardon for implementing the ServletUnit header method handling code and session.getAttributeNames
    Thanks to Geert Bevin for finding and fixing the ServletUnit POST parameters bug.
    Thanks to Geert Bevin for implementing ServletUnit support for HttpServletRequest.getParameterMap

Problems fixed:
    1. The "_parent" frame target should now be handled correctly.
    2. Relative URLs were not being computed properly when the base URL had a query string containing a slash.
    3. WebResponses are now recognized as HTML even if the content type is not lower case.
    4. A form request created after a call to getScriptableObject().setAction() now correctly uses the new action.
    5. Table lookups should be faster, especially for complex and large tables
    6. Embedded spaces in URLs are now encoded when a request is made
    7. Relative URLs beginning with "?" were not being handled properly.
    8. Disabling scripting result in IllegalStateException being thrown.
    9. Fixed handling of error statuses when information is still sent on input stream